hapiness index project

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <span>Al (Alpesh) Vadhiya</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>Data Analyst</p>
+        <p>Data Analyst | PowerBI | Tableau | SQL | Python</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/Happiness.gif" class="work__image" alt="Project 1" />
             </div>
           </div>
 
